<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <RelativeLayout android:id="@+id/content_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout android:id="@+id/navbar"
            android:layout_marginTop="0dp"
            android:layout_marginStart="0dp"
            android:layout_width="400dp"
            android:layout_height="100dp"
            >

            <View
                android:id="@+id/rectangle_1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/rectangle_1_shape" />

            <ImageView
                android:id="@+id/applogo"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:contentDescription="applogo"
                android:src="@drawable/applogo" />

            <ImageView
                android:id="@+id/profile"
                android:layout_width="36.31dp"
                android:layout_height="36dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="40dp"
                android:contentDescription="vector"
                android:src="@drawable/vector" />
            <ImageView
                android:id="@+id/profile2"
                android:layout_width="28.75dp"
                android:layout_height="7.7dp"
                android:layout_marginStart="334dp"
                android:layout_marginTop="58dp"
                android:contentDescription="vector_ek1"
                android:src="@drawable/vector_ek1" />

            <ImageView
                android:id="@+id/profile3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="342dp"
                android:layout_marginTop="45dp"
                android:contentDescription="vector_ek2"
                android:src="@drawable/vector_ek2" />

            <ImageView
                android:id="@+id/notificationicon"
                android:layout_width="25.67dp"
                android:layout_height="28dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="45dp"
                android:contentDescription="vector_ek11"
                android:src="@drawable/vector_ek11" />

        </RelativeLayout>
        <ScrollView android:id="@+id/specificlistingpage"
            android:layout_width="400dp"
            android:layout_height="514dp"
            android:layout_marginTop="100dp">

            <RelativeLayout
                android:layout_marginTop="-100dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <RelativeLayout android:id="@+id/photo_group"
                    android:layout_marginTop="129dp"
                    android:layout_marginStart="33dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <ImageView android:id="@+id/displayimage"
                        android:src="@drawable/image6"
                        android:contentDescription="image11"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="319dp"
                        android:layout_height="211dp" />


                    <RelativeLayout android:id="@+id/presentat_on_bubbles"
                        android:layout_marginTop="228dp"
                        android:layout_marginStart="107dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/radiobutton1"
                            android:background="@color/ellipse_3_color"
                            android:layout_marginStart="-1dp"
                            android:layout_marginTop="-1dp"
                            android:layout_width="13dp"
                            android:layout_height="13dp" />

                        <View   android:id="@+id/radiobutton2"
                            android:background="@color/black"
                            android:layout_marginStart="29dp"
                            android:layout_marginTop="-1dp"
                            android:layout_width="13dp"
                            android:layout_height="13dp" />

                        <View   android:id="@+id/radiobutton3"
                            android:background="@color/black"
                            android:layout_marginStart="59dp"
                            android:layout_marginTop="-1dp"
                            android:layout_width="13dp"
                            android:layout_height="13dp" />

                        <View   android:id="@+id/radiobutton4"
                            android:background="@color/black"
                            android:layout_marginStart="84dp"
                            android:layout_marginTop="-1dp"
                            android:layout_width="13dp"
                            android:layout_height="13dp" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout android:id="@+id/page_specificlistingpage_ek1"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <ImageView android:id="@+id/image_3"
                        android:src="@drawable/image_3"
                        android:contentDescription="image_3"
                        android:layout_marginStart="45dp"
                        android:layout_marginTop="370dp"
                        android:layout_width="70dp"
                        android:layout_height="70dp" />

                    <TextView android:id="@+id/landownerName"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/_bg__navbar_ek1_color"
                        android:layout_marginLeft="118dp"
                        android:layout_marginTop="379dp"
                        android:layout_width="124.4dp"
                        android:layout_height="35.4dp"
                        android:text="@string/mustafa_yildirim_string"
                        />

                    <TextView android:id="@+id/rentamount"
                        android:textSize="14sp"
                        android:layout_marginLeft="125dp"
                        android:layout_marginTop="410dp"
                        android:layout_width="115.4dp"
                        android:layout_height="30.4dp"
                        android:text="7500TL/Year"
                        />
                </RelativeLayout>

                <TextView android:id="@+id/ankara"
                    android:textSize="19sp"
                    android:textColor="@color/_bg__navbar_ek1_color"
                    android:layout_marginStart="42dp"
                    android:layout_marginTop="475dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Konya/Meram"
                    />

                <ImageView android:id="@+id/location"
                    android:src="@drawable/location"
                    android:contentDescription="location"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="477dp"
                    android:layout_width="22dp"
                    android:layout_height="22dp" />

                <TextView android:id="@+id/land_usage_condition__agriculture"
                    android:textSize="12sp"
                    android:textColor="@color/_bg__navbar_ek1_color"
                    android:layout_marginLeft="27dp"
                    android:layout_marginTop="506dp"
                    android:layout_width="346.2dp"
                    android:layout_height="24.2dp"
                    android:text="@string/land_usage_condition__agriculture_string"
                    />

                <ImageView android:id="@+id/line_1"
                    android:src="@drawable/line_1"
                    android:contentDescription="line_1"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="465dp"
                    android:layout_width="360dp"
                    android:layout_height="1dp" />

                <ImageView android:id="@+id/line_5"
                    android:src="@drawable/line_5"
                    android:contentDescription="line_5"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="594dp"
                    android:layout_width="360dp"
                    android:layout_height="1dp" />

                <ImageView android:id="@+id/line_4"
                    android:src="@drawable/line_4"
                    android:contentDescription="line_4"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="531dp"
                    android:layout_width="360dp"
                    android:layout_height="1dp" />

                <TextView android:id="@+id/description"
                    android:textSize="13sp"
                    android:textColor="@color/_bg__navbar_ek1_color"
                    android:layout_marginLeft="27dp"
                    android:layout_marginTop="543dp"
                    android:layout_width="330.3dp"
                    android:layout_height="65.3dp"
                    android:text="@string/description__tenant_must_utilize_the_land_for_agriculture_purpose___see_more____string"
                    />

                <TextView android:id="@+id/financial_calculation__determine_whether_you_can_afford_this_land_"
                    android:textSize="11sp"
                    android:textColor="@color/_bg__navbar_ek1_color"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="609dp"
                    android:layout_width="346.1dp"
                    android:layout_height="24.1dp"
                    android:text="@string/financial_calculation__determine_whether_you_can_afford_this_land__string"
                    />

                <RelativeLayout android:id="@+id/login_button_ek2"
                    android:layout_marginTop="640dp"
                    android:layout_marginStart="200dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/calculatebutton"
                        android:background="@drawable/rectangle_10_ek1_shape"
                        android:layout_marginStart="21dp"
                        android:layout_marginTop="4dp"
                        android:layout_width="128dp"
                        android:layout_height="26dp" />

                    <TextView android:id="@+id/calculate"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/_bg__specificlistingpage_ek2_color"
                        android:layout_marginLeft="-2dp"
                        android:layout_marginTop="6dp"
                        android:layout_width="180dp"
                        android:layout_height="18.74dp"
                        android:text="@string/calculate_string"
                        />
                </RelativeLayout>

                <TextView android:id="@+id/resultoutput"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/_bg__specificlistingpage_ek2_color"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="690dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Result    "
                    />

                <RelativeLayout android:id="@+id/e_mail_textbox"
                    android:layout_marginTop="635dp"
                    android:layout_marginStart="27dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View
                        android:id="@+id/rectangle_9"
                        android:layout_width="174dp"
                        android:layout_height="38dp"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rectangle_9_shape" />

                    <EditText
                        android:id="@+id/monthlyincometextbox"
                        android:layout_width="118.17dp"
                        android:layout_height="32.2dp"
                        android:layout_gravity="center_horizontal|center"
                        android:layout_marginLeft="29dp"
                        android:layout_marginTop="9dp"
                        android:gravity="center"
                        android:hint="@string/monthly_income_string"
                        android:textColor="@color/_bg__navbar_ek1_color"
                        android:textSize="12sp" />

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_marginTop="-120dp"
            android:layout_marginStart="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <RelativeLayout android:id="@+id/login_button_ek4"
                android:layout_marginTop="730dp"
                android:layout_marginStart="67dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/rentbutton"
                    android:background="@drawable/rectangle_10_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="3dp"
                    android:layout_width="253dp"
                    android:layout_height="38dp" />

                <TextView android:id="@+id/rentTextView"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/_bg__specificlistingpage_ek2_color"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="9dp"
                    android:layout_width="219dp"
                    android:layout_height="26.97dp"
                    android:text="@string/rent_string"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/elements"
                android:layout_width="wrap_content"
                android:layout_height="800dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="700dp">

                <View
                    android:id="@+id/requestsellercontactbutton"
                    android:layout_width="253dp"
                    android:layout_height="38dp"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/rectangle_10_shape" />

                <TextView
                    android:id="@+id/requestsellercontacttextview"
                    android:layout_width="218.4dp"
                    android:layout_height="25.37dp"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="85dp"
                    android:layout_marginTop="85dp"
                    android:gravity="center"
                    android:text="@string/request_seller_contact_string"
                    android:textColor="@color/_bg__specificlistingpage_ek2_color"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</HorizontalScrollView>